# autoscraper

./: pyproject.toml  setup.py
autoscraper/: auto_scraper.py
tests/: test_async.py
