[tool.poetry]
name = "autoscraper"
version = "0.1.0"
description = ""
authors = ["Taras Ivashchuk <taras@tarasivashchuk.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "*"
requests = "*"
bs4 = "*"
lxml = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
flake8 = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
